--- a/4.html
+++ b/4.html
@@ -3,9 +3,25 @@
     <head>
         <title>원피스(One Piece) [만화]</title> 
         <meta charset="utf-8"> 
+        <style> 
+            h1 {
+                font-size: 45px;
+                text-align: center;
+            }
+            a {
+                color:black;
+                text-decoration: none;
+            }
+            .saw {
+                color:grey;
+            }
+            .active {
+                color:red;
+            }
+        </style>
     </head>
     <body>
-        <h1><a href="1.html">원피스</a></h1>
+        <h1><a href="index.html">원피스</a></h1>
         <ol>
             <li><a href="2.html">몽키 D. 루피</a></li>
             <li><a href="3.html">롤로노아 조로</a></li>
