--- a/index.html
+++ b/index.html
@@ -3,16 +3,61 @@
     <head>
         <title>원피스(One Piece) [만화]</title> 
         <meta charset="utf-8"> 
+        <style> 
+        /*
+        block level element
+        */
+        
+            #active {
+                color:gray;
+            }
+            h1 {
+                font-size: 45px;
+                text-align: center;
+                border-bottom:1px solid gray;
+                padding: 20px;
+                margin:0;
+
+            }
+            ol{
+                border-right:1px solid gray;
+                width:100px;
+                margin:5px;
+                padding:15px;
+
+            }
+            body{
+                margin:0;
+            }
+            a {
+                color:black;
+                text-decoration: none;
+            }
+            .saw {
+                color:gray;
+            }
+            .active {
+                color:red;
+            }
+            #grid{
+                display: grid;
+                grid-template-columns: 150px 1fr;
+            }
+            #article{
+                padding-left:25px;
+            }
+        </style>
     </head>
     <body>
-        <h1><a href="1.html">원피스</a></h1>
-        <ol>
-            <li><a href="2.html">몽키 D. 루피</a></li>
-            <li><a href="3.html">롤로노아 조로</a></li>
-            <li><a href="4.html">빈스모크 상디</a></li>
-        </ol>
-
-        <h2>개요</h2>
+        <h1><a href="index.html">One Piece</a></h1>
+        <div id="grid">
+            <ol>
+                <li><a href="2.html" class="saw">몽키 D. 루피</a></li>
+                <li><a href="3.html" class="saw active" id="active">롤로노아 조로</a></li>
+                <li><a href="4.html">빈스모크 상디</a></li>
+            </ol>
+        <div id="article">
+            <h2>개요</h2>
         <p><a href="https://ko.wikipedia.org/wiki/%EC%9B%90%ED%94%BC%EC%8A%A4_(%EB%A7%8C%ED%99%94)"
         target="_blank" title="html5 speicification">원피스</a>는 해적을 동경하던 소년 몽키 D. 루피가 주인공으로, 
         그 루피가 자라나 <strong><u>해적왕</u>을 목표로</strong>
@@ -33,5 +78,7 @@
         <h2>줄거리</h2>
         해적 몽키 D. 루피는, 해적왕이 되기로 각오하고 바다를 탐험하며 동료를 모은다. 루피가 결성한 밀짚모자 해적단은 해적하면 연상되는 약탈과 살인 대신 동료를 만들고 그 동료들과 나라를 도와주거나 탐험을 하는 등의 자유분방하고 동료를 무엇보다 위하는 그런 해적단이다. 루피와 그의 동료들은 각자의 꿈과 목적을 가지고 있으며 그것을 이루기 위해 바다를 여행하고 있다.
         원피스의 전개는 해적만화지만 해상보다는 육지에서 주로 이루어진다. 주로 각 섬에서 사건에 휘말려버리고, 그 섬의 적을 쓰러뜨린 후 다음의 섬으로 나아간다. 적의 경우에는 해적이 많으나, 세계정부의 해군, 정부의 첩보 기관, 한 나라의 원수 등의 공권력과 싸우는 경우도 있다. 바다에서는 주로 항해만이 묘사되고 있으며, 대포 포격 등 화기를 이용한 싸움은 별로 그려지지 않는 대신 등장인물 중에는 초인적인 전투 능력을 가진 이들이 많기 때문에, 주로 초인간의 싸움이 자주 등장한다.
+        </div>
+        </div>
     </body>
 </html>
