--- a/2.html
+++ b/2.html
@@ -3,31 +3,17 @@
     <head>
         <title>원피스(One Piece) [만화]</title> 
         <meta charset="utf-8"> 
-        <style> 
-            h1 {
-                font-size: 45px;
-                text-align: center;
-            }
-            a {
-                color:black;
-                text-decoration: none;
-            }
-            .saw {
-                color:grey;
-            }
-            .active {
-                color:red;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1><a href="index.html">원피스</a></h1>
+        <div id="grid">
         <ol>
             <li><a href="2.html">몽키 D. 루피</a></li>
             <li><a href="3.html">롤로노아 조로</a></li>
             <li><a href="4.html">빈스모크 상디</a></li>
         </ol>
-
+        <div id="article">
         <h2>몽키 D. 루피</h2>
         <img src="루피.jpg" width="60%">
         <p>
@@ -36,7 +22,8 @@
         최악의 세대의 일원으로 이따금 세간에 이름을 떨치는 D의 이름을 가진 해적이기도 하다. 겁이 없고 낙천적이며, 자유와 모험을 사랑하고 무엇보다 동료와 친구를 소중히 여긴다. 때문에 해적 동료들은 루피를 진심으로 따른다. 생명의 은인이자 자신을 해적의 길로 이끌어 준 위대한 사나이 빨간 머리 해적단의 선장 샹크스를 누구보다도 존경한다. 위풍당당한 해적이 돼서 샹크스와 재회해 그가 맡긴 밀짚모자를 돌려줄 날을 기다리고 있다.
 
         <br><br><br>
-
+    </div>
+    </div>
         
         
     </body>
