--- a/4.html
+++ b/4.html
@@ -3,37 +3,23 @@
     <head>
         <title>원피스(One Piece) [만화]</title> 
         <meta charset="utf-8"> 
-        <style> 
-            h1 {
-                font-size: 45px;
-                text-align: center;
-            }
-            a {
-                color:black;
-                text-decoration: none;
-            }
-            .saw {
-                color:grey;
-            }
-            .active {
-                color:red;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1><a href="index.html">원피스</a></h1>
+        <div id="grid">
         <ol>
             <li><a href="2.html">몽키 D. 루피</a></li>
             <li><a href="3.html">롤로노아 조로</a></li>
             <li><a href="4.html">빈스모크 상디</a></li>
         </ol>
 
-
-        <br><br><br>
-
+        <div id="article">
         <h2>빈스모크 상디</h2>
         <img src="상디.jpg" width="60%">
         <p>
             원피스의 등장인물로 밀짚모자 일당의 요리사. 몽키 D. 루피의 네 번째 동료. 목표는 요리사들의 낙원 오올 블루를 찾는 것. 해상 레스토랑 발라티에 부주방장 출신으로 요리 실력은 제프에게 인정받았고 지금은 그야말로 세계제일이다.[56] 상디가 동료로 들어오기 이전까지의 밀짚모자 일당의 식생활은 참담하기 그지 없었다.[57] 또한 '숙녀'에게 만큼은 매너가 좋은 신사이자 기사도 정신의 화신이면서도 동시에 엄청난 변태 색골이기도 하다.
+    </div>
+    </div>
     </body>
 </html>
