--- a/index.html
+++ b/index.html
@@ -3,50 +3,7 @@
     <head>
         <title>원피스(One Piece) [만화]</title> 
         <meta charset="utf-8"> 
-        <style> 
-        /*
-        block level element
-        */
-        
-            #active {
-                color:gray;
-            }
-            h1 {
-                font-size: 45px;
-                text-align: center;
-                border-bottom:1px solid gray;
-                padding: 20px;
-                margin:0;
-
-            }
-            ol{
-                border-right:1px solid gray;
-                width:100px;
-                margin:5px;
-                padding:15px;
-
-            }
-            body{
-                margin:0;
-            }
-            a {
-                color:black;
-                text-decoration: none;
-            }
-            .saw {
-                color:gray;
-            }
-            .active {
-                color:red;
-            }
-            #grid{
-                display: grid;
-                grid-template-columns: 150px 1fr;
-            }
-            #article{
-                padding-left:25px;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1><a href="index.html">One Piece</a></h1>
